# ProjectBoilerplate

./: .env.example  .env.production.example  .gitignore  .pre-commit-config.yaml  DEV_GUIDE.md  Dockerfile  Makefile  README.md  bootstrap.py  bootstrap_no_emoji.py  docker-compose.yml  makefile  manage.py  run.py  setup.cfg  setup.py
.github/workflows/: ci.yaml
docs/: handbook.md
requirements/: base.in  base.txt  development.in  development.txt  production.in  production.txt
src/: celery.py  manage.py
src/apps/: __init__.py
src/config/: __init__.py  urls.py
src/config/settings/: __init__.py  apps.py  base.py  database.py  development.py  environments.py  logging.py  mail.py  production.py  restframework.py  test.py
src/templates/: base.html
src/tests/: functional_tests.py
tools/: watch_in_compile.py
