[metadata]
name = boilerplate_project
version = 0.2.0
description = Reusable Django boilerplate project
long_description = file: README.md
long_description_content_type = text/markdown
author = JD Gresse
author_email = jdgresse01@gmail.com
license = MIT
classifiers =
    Programming Language :: Python :: 3
    Framework :: Django
    Operating System :: OS Independent
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License

[options]
packages = find:
package_dir =
    = src
python_requires = >=3.9
include_package_data = true

[options.packages.find]
where = src

[options.extras_require]
dev =
    black
    isort
    flake8
    pytest
    ipython
    python-dotenv
    django-stubs
    mypy

[flake8]
max-line-length = 88
exclude = .git,__pycache__,.venv,build,dist,env,environments

[isort]
profile = black
known_first_party = config,apps
src_paths = src

[tool:pytest]
DJANGO_SETTINGS_MODULE = config.settings.test
python_files = tests.py test_*.py *_tests.py
